# code-snippet-search-and-finder

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
Backend/: .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
Frontend/: .env  .gitignore  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  firebase.js  main.jsx
Frontend/src/components/: AddRepoButton.jsx  AddRepoModal.jsx  CodeCard.jsx  CodeExplanation.jsx  CodeViewer.jsx  CopyButton.jsx  ExportButton.jsx  Features.jsx  FileTree.jsx  Footer.jsx  Hero.jsx  HistoryItem.jsx  HistoryList.jsx  LoginForm.jsx  Navbar.jsx  ProgressBar.jsx  ProtectedRoute.jsx  RepositoryCard.jsx  RepositoryList.jsx  SearchBar.jsx  SearchResults.jsx  SignupForm.jsx
Frontend/src/pages/: CodeDetail.jsx  Dashboard.jsx  History.jsx  Landing.jsx  Login.jsx  RepositoryDetail.jsx  Search.jsx  Signup.jsx
Frontend/src/utils/: export.js
